fixed team detail pages

--- a/sm-rest/src/main/webapp/partials/matchesList.html
+++ b/sm-rest/src/main/webapp/partials/matchesList.html
@@ -24,10 +24,10 @@
 					<span>{{ match.id }}</span>
 				</td>
 				<td>
-					<a href="#!/teams/{{match.homeTeam.id}}">{{ match.homeTeam.clubName }}</a>
+					<a href="#!/team/{{match.homeTeam.id}}">{{ match.homeTeam.clubName }}</a>
 				</td>
 				<td>
-					<a href="#!/teams/{{match.awayTeam.id}}">{{ match.awayTeam.clubName }}</a>
+					<a href="#!/team/{{match.awayTeam.id}}">{{ match.awayTeam.clubName }}</a>
 				</td>
 				<td>
 					<span>{{ match.date }}</span>
