--- a/sm-rest/src/main/webapp/partials/user_team_detail.html
+++ b/sm-rest/src/main/webapp/partials/user_team_detail.html
@@ -3,7 +3,11 @@
     <h2><b>Country: </b> {{team.country}}</h2>
     <h2><b>Championship: </b>{{team.championshipName}}</h2>
     <h2><b>Budget: </b>{{team.budget}}</h2>
-    
+    <a href="#!/teams/addplayer" class="btn btn-primary">
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        Add player to the team
+    </a>
+
     <table class="table">
         <thead>
         <tr>
@@ -25,6 +29,9 @@
             <td>{{player.footed}}</td>
             <td>{{player.birthDate}}</td>
             <td>{{player.position}}</td>
+            <td>
+                <button ng-click="removePlayerFromTeam(team, player)" type="button" class="btn btn-primary">Remove from team</button>
+            </td>
         </tr>
         </tbody>
     </table>
