--- a/sm-rest/src/main/webapp/partials/team_detail.html
+++ b/sm-rest/src/main/webapp/partials/team_detail.html
@@ -29,7 +29,7 @@
         </tbody>
     </table>
     <div class="row">
-        <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2" ng-repeat="player in tream.players">
+        <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2" ng-repeat="player in team.players">
             <a href="#!/player/{{player.id}}">
                 <div class="thumbnail">
                     <!--<img ng-src="{{product._links.image.href}}"><br>-->
