--- a/sm-rest/src/main/webapp/partials/user_team_detail.html
+++ b/sm-rest/src/main/webapp/partials/user_team_detail.html
@@ -3,7 +3,7 @@
     <h2><b>Country: </b> {{team.country}}</h2>
     <h2><b>Championship: </b>{{team.championshipName}}</h2>
     <h2><b>Budget: </b>{{team.budget}}</h2>
-    <a href="#!/teams/addplayer" class="btn btn-primary">
+    <a ng-href="#!/teams/{{team.id}}/addplayer" class="btn btn-primary">
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
         Add player to the team
     </a>
@@ -35,18 +35,4 @@
         </tr>
         </tbody>
     </table>
-    <div class="row">
-        <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2" ng-repeat="player in tream.players">
-            <a href="#!/player/{{player.id}}">
-                <div class="thumbnail">
-                    <!--<img ng-src="{{product._links.image.href}}"><br>-->
-
-                    <div class="caption">
-                        <h3>{{player.name}}</h3>
-                        <span style="color: red; font-weight: bold;">{{player.rating}}&nbsp;{{player.footed}}</span>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
 </div>
