Added a page for a player's creation.

--- a/sm-rest/src/main/webapp/partials/playersList.html
+++ b/sm-rest/src/main/webapp/partials/playersList.html
@@ -61,6 +61,6 @@
     </tbody>
 </table>
 
-<a href="#!/player/create" class="btn btn-primary" role="button" ng-hide="!hasAdminRights()">Add a new player</a>
+<a href="#!/players/create" class="btn btn-primary" role="button" ng-hide="!hasAdminRights()">Add a new player</a>
 </body>
 </html>
