fixed some links in pages

--- a/sm-rest/src/main/webapp/partials/playersList.html
+++ b/sm-rest/src/main/webapp/partials/playersList.html
@@ -41,7 +41,7 @@
             <span>{{ player.rating }}</span>
         </td>
         <td>
-            <span ng-hide="isFree(player)">{{ player.team.clubName }}</span>
+			<a ng-hide="isFree(player)" href="#!/team/{{ player.team.id }}">{{ player.team.clubName }}</a>
             <span ng-hide="!isFree(player)"><i>None</i></span>
         </td>
         <td>
