--- a/sm-rest/src/main/webapp/partials/team_detail.html
+++ b/sm-rest/src/main/webapp/partials/team_detail.html
@@ -30,7 +30,7 @@
     </table>
     <div class="row">
         <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2" ng-repeat="player in team.players">
-            <a href="#!/player/{{player.id}}">
+            <a href="#!/players/{{player.id}}">
                 <div class="thumbnail">
                     <!--<img ng-src="{{product._links.image.href}}"><br>-->
 
