--- a/sm-rest/src/main/webapp/partials/matchesList.html
+++ b/sm-rest/src/main/webapp/partials/matchesList.html
@@ -30,7 +30,7 @@
 					<a href="#!/team/{{match.awayTeam.id}}">{{ match.awayTeam.clubName }}</a>
 				</td>
 				<td>
-					<span>{{ match.date }}</span>
+					<span>{{ formatDateTime(match.date) }}</span>
 				</td>
 				<td>
 					<span ng-hide="!alreadyPlayed(match)">{{ match.homeTeamGoals }}  : {{ match.awayTeamGoals }}</span>
