Fixed birthday for players.

--- a/sm-rest/src/main/webapp/partials/playersDetail.html
+++ b/sm-rest/src/main/webapp/partials/playersDetail.html
@@ -8,8 +8,8 @@
 
 <h1><b><i>{{ player.playerName }}</i></b></h1>
 <br>
-<h2><b>Nationality: </b> {{ player.nationality }}</h2>
-<h2><b>Birthday: </b>{{ player.birthDate }}</h2>
+<h2><b>Nationality: </b>{{ player.nationality }}</h2>
+<h2><b>Birthday: </b>{{ date }}</h2>
 <br>
 <h2><b>Rating: </b>{{ player.rating }}</h2>
 <br>
