--- a/sm-rest/src/main/webapp/partials/playersUpdate.html
+++ b/sm-rest/src/main/webapp/partials/playersUpdate.html
@@ -7,7 +7,7 @@
 <body>
 <h1>{{ player.playerName }}</h1>
 <p>- {{ player.nationality }}</p>
-<p>- {{ player.birthDate }}</p>
+<p>- {{ date }}</p>
 
 <form name="form" novalidate class="form-horizontal">
     <input id="id" name="id" value="{{player.id}}" type="hidden"/>
