--- a/sm-rest/src/main/webapp/partials/playersCreate.html
+++ b/sm-rest/src/main/webapp/partials/playersCreate.html
@@ -30,11 +30,11 @@
     <div class="form-group" ng-class="{'has-error': !(form.birthDate.$valid)}">
         <label for="birthDate" class="col-sm-2 control-label">Birthday</label>
         <div class="col-sm-10">
-            <input placeholder="yyyy-MM-dd" type="date" min="1800-01-01" max="{{ now }}" id="birthDate" name="birthDate"
-                   class="form-control" ng-model="player.birthDate" required/>
+            <input placeholder="yyyy-MM-dd" type="date" min="1800-01-01" max="{{ max_date }}" id="birthDate"
+                   name="birthDate" class="form-control" ng-model="player.birthDate" required/>
             <span class="help-block" ng-show="form.birthDate.$error.required">player's birthday is required</span>
             <span class="help-block" ng-show="form.birthDate.$error.min">date is too far in the past</span>
-            <span class="help-block" ng-show="form.birthDate.$error.max">date can't be in the future</span>
+            <span class="help-block" ng-show="form.birthDate.$error.max">player must be at least 18 years old</span>
         </div>
     </div>
     <div class="form-group" ng-class="{'has-error': !(form.rating.$valid)}">
