--- a/sm-rest/src/main/webapp/partials/pickTeam.html
+++ b/sm-rest/src/main/webapp/partials/pickTeam.html
@@ -2,11 +2,11 @@
 <table class="table">
     <thead>
     <tr>
-        <th>id</th>
-        <th>club name</th>
-        <th>championship name</th>
-        <th>country</th>
-        <th>budget</th>
+        <th>#</th>
+        <th>Club name</th>
+        <th>Championship name</th>
+        <th>Country</th>
+        <th>Budget</th>
     </tr>
     </thead>
     <tbody>
