--- a/sm-rest/src/main/webapp/partials/login.html
+++ b/sm-rest/src/main/webapp/partials/login.html
@@ -1,3 +1,4 @@
+<h3 style="color: #007196; text-align: center"><b>Soccer Manager</b> - Login Page</h3>
 <div ng-show="error" class="alert alert-danger">{{error}}</div>
 <form ng-submit="login(username, password)">
     <div class="form-group">
