--- a/sm-rest/src/main/webapp/partials/matchesList.html
+++ b/sm-rest/src/main/webapp/partials/matchesList.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+	<h1>Matches</h1>
 	<table class="table">
 		<thead>
 			<tr>
@@ -46,6 +47,6 @@
 		</tbody>
 	</table>
 	
-	<a href="#!/matches/create" class="btn btn-primary" role="button" ng-hide="!hasAdminRights()">Plan match</a>
+	<a href="#!/matches/create" class="btn btn-primary" role="button" ng-hide="!hasAdminRights()">Plan a match</a>
 </body>
 </html>
