--- a/sm-rest/src/main/webapp/partials/team_detail.html
+++ b/sm-rest/src/main/webapp/partials/team_detail.html
@@ -1,19 +1,20 @@
 <div>
-    <h1><b>{{team.clubName}}</b></h1>
-    <h2><b>Country: </b> {{team.country}}</h2>
-    <h2><b>Championship: </b>{{team.championshipName}}</h2>
-    <h2><b>Budget: </b>{{team.budget}}</h2>
-    
+    <h1 style="text-align: center"><b>{{team.clubName}}</b></h1>
+    <p><b>Country: </b> {{team.country}}</p>
+    <p><b>Championship: </b>{{team.championshipName}}</p>
+    <p><b>Budget: </b>{{team.budget}}</p>
+    <p><b>Players: </b></p>
+
     <table class="table">
         <thead>
         <tr>
-            <th>id</th>
-            <th>player name</th>
-            <th>nationality</th>
-            <th>rating</th>
-            <th>footed</th>
-            <th>birth date</th>
-            <th>position</th>
+            <th>#</th>
+            <th>Name</th>
+            <th>Nationality</th>
+            <th>Birthday</th>
+            <th>Rating</th>
+            <th>Position</th>
+            <th>Footed</th>
         </tr>
         </thead>
         <tbody>
@@ -21,10 +22,10 @@
             <td>{{player.id}}</td>
             <td>{{player.playerName}}</td>
             <td>{{player.nationality}}</td>
-            <td>{{player.rating}}</td>
-            <td>{{player.footed}}</td>
             <td>{{player.birthDate}}</td>
+            <td>{{player.rating}}</td>
             <td>{{player.position}}</td>
+            <td>{{player.footed}}</td>
         </tr>
         </tbody>
     </table>
