Team updating is possible from admin and user side.

--- a/sm-rest/src/main/webapp/partials/playersUpdate.html
+++ b/sm-rest/src/main/webapp/partials/playersUpdate.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Player Create</title>
+    <title>Player update</title>
 </head>
 <body>
 <h1>{{ player.playerName }}</h1>
