--- a/sm-rest/src/main/webapp/partials/admin_teams.html
+++ b/sm-rest/src/main/webapp/partials/admin_teams.html
@@ -25,6 +25,12 @@
         <td>
             <button ng-click="deleteTeam(team)" type="button" class="btn btn-primary">Delete</button>
         </td>
+        <td>
+            <a ng-href="#!/admin/teams/{{team.id}}" class="btn btn-primary">
+                <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                Update team
+            </a>
+        </td>
 
     </tr>
     </tbody>
