--- a/sm-rest/src/main/webapp/partials/user_team_detail.html
+++ b/sm-rest/src/main/webapp/partials/user_team_detail.html
@@ -7,6 +7,10 @@
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
         Add player to the team
     </a>
+    <a ng-href="#!/user/teams/{{team.id}}" class="btn btn-primary">
+        <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+        Update team
+    </a>
 
     <table class="table">
         <thead>
