Alternative team picking

--- a/sm-rest/src/main/webapp/partials/user_team_detail.html
+++ b/sm-rest/src/main/webapp/partials/user_team_detail.html
@@ -7,6 +7,10 @@
         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
         Add player to the team
     </a>
+        <a ng-href="#!/teams/pick" class="btn btn-primary">
+        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+        Change Team
+    </a>
 
     <table class="table">
         <thead>
