--- a/sm-rest/src/main/webapp/partials/admin_update_team.html
+++ b/sm-rest/src/main/webapp/partials/admin_update_team.html
@@ -26,8 +26,10 @@
         <label for="country" class="col-sm-2 control-label">Country</label>
         <div class="col-sm-10">
             <select id="country" name="country" class="form-control" ng-model="team.country">
-                <option ng-repeat="country in countries" value="{{country}}">ng-selected="position == player.position">{{ position }}</option>
-            </select>
+				<option ng-repeat="country in countries" value="{{ country }}"
+                        ng-selected="country == team.country">{{ country }}
+                </option>
+			</select>
         </div>
     </div>
 
