removed hiding of update buttons in admin_teams.html

--- a/sm-rest/src/main/webapp/partials/admin_teams.html
+++ b/sm-rest/src/main/webapp/partials/admin_teams.html
@@ -22,7 +22,7 @@
             <button ng-click="deleteTeam(team)" type="button" class="btn btn-primary">Delete</button>
         </td>
         <td>
-            <a ng-hide="!team.updatable" ng-href="#!/admin/teams/{{team.id}}" class="btn btn-primary">
+            <a ng-href="#!/admin/teams/{{team.id}}" class="btn btn-primary">
                 <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                 Update team
             </a>
